k8s/enhanced-autoscaling.yaml
apiVersion: v1
kind: Service
metadata:
  name: sourceless-load-balancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  ports:
  - port: 3002
    targetPort: 3002
    protocol: TCP
  selector:
    app: sourceless-blockchain
